<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="@drawable/rounded_corners_12dp"
    android:paddingBottom="16dp"
    android:layout_marginBottom="8dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sf_ui_text_regular"
        android:text="@string/tour"
        android:textColor="@color/grey_600"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_tour_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sf_ui_text_regular"
        tools:text="186 600 ₽"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/sf_ui_text_regular"
        android:text="@string/fuel_charge"
        android:textColor="@color/grey_600"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_fuel_price"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_fuel_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sf_ui_text_regular"
        tools:text="9 300 ₽"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tour_price" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/sf_ui_text_regular"
        android:text="@string/service_charge"
        android:textColor="@color/grey_600"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_service_price"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_service_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sf_ui_text_regular"
        tools:text="2 136 ₽"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fuel_price" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/sf_ui_text_regular"
        android:text="@string/to_pay"
        android:textColor="@color/grey_600"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_total"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/sf_ui_text_regular"
        tools:text="198 036 ₽"
        android:textColor="@color/blue_100"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_service_price" />


</androidx.constraintlayout.widget.ConstraintLayout>